<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/changeRadioDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeTextDefault"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/changeRadioParameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeTypeParameter"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5sp"
            android:layout_marginVertical="5sp">

            <RadioButton
                android:id="@+id/visaButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_cart_type_1" />

            <RadioButton
                android:id="@+id/mastercardButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_cart_type_2" />

            <RadioButton
                android:id="@+id/discoverButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_cart_type_3" />
        </RadioGroup>

        <Button
            android:id="@+id/changeTypeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:textColor="@color/foreground"
            android:text="@string/changeConfirm" />

    </LinearLayout>
</FrameLayout>