<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/text_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkout_option_discount" />

        <Spinner
            android:id="@+id/spinner_discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/text_voucher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkout_option_voucher" />

        <Spinner
            android:id="@+id/spinner_voucher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/text_type_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkout_option_type_pay" />

        <Spinner
            android:id="@+id/spinner_type_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/bt_checkout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/checkout_confirm"
            android:textColor="@color/foreground"/>

    </LinearLayout>

</FrameLayout>