<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/changeTextDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeTextDefault"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/changeTextParameter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeTextParameter"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/changeTextInput"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginHorizontal="5sp"
            android:layout_marginVertical="5sp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/changeTextDefault"
            android:textSize="18sp" />

        <Button
            android:id="@+id/changeTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:text="@string/changeConfirm" />
    </LinearLayout>
</FrameLayout>